2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* CSharpBinding.addin.xml: Bump MD version.

2009-04-09  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed "Bug 429034 - Class alias
	  completion not working properly".

2009-04-09  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Parser/FindMemberAstVisitor.cs: Fixed "Bug 493202 - List
	  References on private constructor yields nothing".

2009-04-08  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorIndentation.cs: Activated virtual
	  leading whitespace feature.

2009-04-08  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: Fixed possible null ref
	  exception.

2009-04-07  Mike Krüger  <mkrueger@novell.com>

	* Parser/CodeGenerator.cs:
	* Parser/NRefactoryParser.cs:
	* Gui/NRefactoryTemplateParameterDataProvider.cs: Added name
	  validator (for Bug 414735 - Rename refactoring should not
	  allow invalid names).

2009-04-07  Mike Krüger  <mkrueger@novell.com>

	* Parser/CodeGenerator.cs: Implemented "Bug 492675 - New line
	  & ; at end of line".

2009-04-06  Mike Krüger  <mkrueger@novell.com>

	* Parser/CodeGenerator.cs: fixed bug in add namespace import
	  method.

2009-04-06  Mike Krüger  <mkrueger@novell.com>

	* Parser/CodeGenerator.cs: AddNamespace import is now atomar.

2009-04-06  Mike Krüger  <mkrueger@novell.com>

	* Parser/CodeGenerator.cs:
	* Gui/NRefactoryResolver.cs: Added "resolve namespace"
	  feature.

2009-04-06  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 438696 - Error
	  in text editor extension chain.".

2009-04-03  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Implemented "Bug 325527 -
	  Make C# intellisense smarted for base classes".

2009-04-03  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs:
	* Gui/MemberCompletionData.cs:
	* Gui/NRefactoryParameterDataProvider.cs: Added some tooltip